--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -17,12 +18,24 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    aaptOptions {
+        noCompress "tflite"
+    }
+    packagingOptions {
+        exclude 'META-INF/androidx.exifinterface_exifinterface.version'
+        exclude 'META-INF/proguard/androidx-annotations.pro'
+    }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.camera:camera-camera2:1.0.0-alpha01'
+    implementation 'androidx.camera:camera-core:1.0.0-alpha02'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.media:media:1.1.0'
+    implementation 'com.google.android.material:material:1.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
@@ -30,6 +43,19 @@ dependencies {
     implementation 'com.google.firebase:firebase-messaging:11.6.0'
     implementation 'com.synnapps:carouselview:0.1.4'
     implementation 'com.squareup.okhttp3:okhttp:3.9.1'
+
+    // ML Kit dependencies
+    implementation 'com.google.firebase:firebase-ml-vision:23.0.0'
+    // Image Labeling model.
+    implementation 'com.google.firebase:firebase-ml-vision-image-label-model:18.0.0'
+    // Face model
+    implementation 'com.google.firebase:firebase-ml-vision-face-model:18.0.0'
+    // Custom model
+    implementation 'com.google.firebase:firebase-ml-model-interpreter:21.0.0'
+    // Object model
+    implementation 'com.google.firebase:firebase-ml-vision-object-detection-model:19.0.1'
+    // AutoML model
+    implementation 'com.google.firebase:firebase-ml-vision-automl:18.0.1'
 }
 
 apply plugin: 'com.android.application'
